distance view now works

--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -545,6 +545,6 @@
         <image name="Top Line" width="375" height="1"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="28w-wD-wPr"/>
+        <segue reference="LKh-Ql-dNR"/>
     </inferredMetricsTieBreakers>
 </document>
